# xHook-openharmony-linux

./: README.md
libxhook/: CMakeLists.txt  compile.bat
libxhook/jni/: CMakeLists.txt  xh_core.c  xh_elf.c  xh_log.c  xh_log.h  xh_util.c
